--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^5.2.9",
+    "@angular/cdk": "^5.2.4",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.4",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
@@ -27,6 +29,7 @@
     "express": "^4.16.3",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
+    "hammerjs": "^2.0.8",
     "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
     "rxjs": "^5.5.6",
@@ -59,7 +62,7 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jackmercy/voting-dapp.git"
+    "url": "https://github.com/jackmercy/voting-contract + https://github.com/jackmercy/voting-dapp.git"
   },
   "keywords": [
     "blockchain"
