--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "app-root-path": "^2.0.1",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
+    "compress": "^0.99.0",
+    "compression": "^1.7.2",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "gulp": "^3.9.1",
@@ -53,6 +56,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "logger": "0.0.1",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
