--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "voting-dapp",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.config.json",
-    "build": "ng build --prod",
+    "ui": "ng serve --proxy-config proxy.config.json",
+    "ui-prod": "ng build --prod",
+    "start": "nodemon app.js --exec babel-node",
+    "build": "babel -d dist",
+    "serve": "node dist/index.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e --proxy-config proxy.config.json"
@@ -46,6 +49,8 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.104",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "codelyzer": "^4.0.1",
     "gulp-dev": "^0.3.0",
     "gulp-env": "^0.4.0",
@@ -57,6 +62,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "logger": "0.0.1",
+    "nodemon": "^1.17.3",
     "protractor": "^5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
