--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-
 # compiled output
 /dist
 /dist-server
 /tmp
 /out-tsc
 /build
-
+Voting.json
 # dependencies
 /node_modules
 
