express: register api, debug Nodejs Angular: register page

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ui-prod": "ng build --prod",
     "start": "nodemon app.js --exec babel-node",
     "build": "babel -d dist",
+    "debug": "babel-node --inspect --inspect-brk=9215 app.js",
     "serve": "node dist/index.js",
     "test": "ng test",
     "lint": "ng lint",
@@ -51,6 +52,7 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.104",
+    "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "codelyzer": "^4.0.1",
