Express: fix bug blockchain out of gas. Angular: update UI

--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/chart.js": "^2.7.14",
     "app-root-path": "^2.0.1",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
+    "chart.js": "^2.7.2",
     "compress": "^0.99.0",
     "compression": "^1.7.2",
     "core-js": "^2.4.1",
