--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voting-dapp",
-  "version": "1.0.1",
+  "version": "1.0.0-beta.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
