--- a/proxy.config.json
+++ b/proxy.config.json
@@ -3,6 +3,7 @@
     "/api/*": {
         "target": "http://localhost:5000",
         "secure": false,
-        "logLevel": "debug"
+        "logLevel": "debug",
+        "changeOrigin": true
     }
 }
