--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "popper": "^1.0.1",
     "rxjs": "^5.5.6",
     "serve-favicon": "^2.5.0",
+    "web3": "^1.0.0-beta.34",
     "zone.js": "^0.8.25"
   },
   "devDependencies": {
