--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "morgan": "^1.9.0",
     "popper": "^1.0.1",
     "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
     "serve-favicon": "^2.5.0",
     "web3": "^1.0.0-beta.34",
     "zone.js": "^0.8.26"
@@ -72,7 +73,8 @@
     "protractor": "^5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "2.7.2"
+    "typescript": "2.7.2",
+    "@angular-devkit/build-angular": "~0.6.8"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 1.7.1.",
   "main": "app.js",
