--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "voting-dapp": {
+    "ether-vote-as": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -49,18 +49,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "voting-dapp:build"
+            "browserTarget": "ether-vote-as:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "voting-dapp:build:production"
+              "browserTarget": "ether-vote-as:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "voting-dapp:build"
+            "browserTarget": "ether-vote-as:build"
           }
         },
         "test": {
@@ -95,7 +95,7 @@
         }
       }
     },
-    "voting-dapp-e2e": {
+    "ether-vote-as-e2e": {
       "root": "",
       "sourceRoot": "e2e",
       "projectType": "application",
@@ -104,7 +104,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "voting-dapp:serve"
+            "devServerTarget": "ether-vote-as:serve"
           }
         },
         "lint": {
@@ -121,7 +121,7 @@
       }
     }
   },
-  "defaultProject": "voting-dapp",
+  "defaultProject": "ether-vote-as",
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "app",
