--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "compression": "^1.7.2",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "generate-password": "^1.4.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "hammerjs": "^2.0.8",
