--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/forms": "6.0.9",
     "@angular/http": "6.0.9",
     "@angular/material": "^6.4.0",
+    "@angular/material-moment-adapter": "^6.4.3",
     "@angular/platform-browser": "6.0.9",
     "@angular/platform-browser-dynamic": "6.0.9",
     "@angular/router": "6.0.9",
@@ -74,7 +75,7 @@
     "protractor": "^5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "2.7.2",
+    "typescript": "^2.7.2",
     "@angular-devkit/build-angular": "~0.6.8"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 1.7.1.",
