add JWT for auth

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "ui": "ng serve --aot --proxy-config proxy.config.json",
-    "ui-prod": "ng build --prod",
+    "build-ui": "ng build --aot --prod",
     "start": "nodemon server/app.js --exec babel-node",
     "build": "babel -d dist",
     "debug": "babel-node --inspect --inspect-brk=9215 server/app.js",
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "6.0.9",
     "@angular/platform-browser-dynamic": "6.0.9",
     "@angular/router": "6.0.9",
+    "@auth0/angular-jwt": "^2.0.0",
     "@types/chart.js": "^2.7.14",
     "app-root-path": "^2.0.1",
     "body-parser": "^1.18.2",
@@ -41,6 +42,7 @@
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
     "popper": "^1.0.1",
