--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@auth0/angular-jwt": "^2.0.0",
     "@types/chart.js": "^2.7.14",
     "app-root-path": "^2.0.1",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
