--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rxjs-compat": "^6.2.2",
     "serve-favicon": "^2.5.0",
     "web3": "^1.0.0-beta.34",
+    "web3-typescript-typings": "^0.10.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
