--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-nodemon": "^2.2.1",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
     "popper": "^1.0.1",
