update Vote-result page and "minor" update AS

--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,7 +1,7 @@
 
 {
     "/api/*": {
-        "target": "http://localhost:5000",
+        "target": "https://localhost:5443",
         "secure": false,
         "logLevel": "debug",
         "changeOrigin": true
