--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ether-vote-as",
-  "version": "2.0.0-beta.1",
+  "version": "2.1.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -17,20 +17,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.9",
-    "@angular/cdk": "^6.4.0",
-    "@angular/common": "6.0.9",
-    "@angular/compiler": "6.0.9",
-    "@angular/core": "6.0.9",
-    "@angular/forms": "6.0.9",
-    "@angular/http": "6.0.9",
-    "@angular/material": "^6.4.0",
-    "@angular/material-moment-adapter": "^6.4.3",
-    "@angular/platform-browser": "6.0.9",
-    "@angular/platform-browser-dynamic": "6.0.9",
-    "@angular/router": "6.0.9",
+    "@angular/animations": "^7.0.2",
+    "@angular/cdk": "^7.0.2",
+    "@angular/common": "^7.0.2",
+    "@angular/compiler": "^7.0.2",
+    "@angular/core": "^7.0.2",
+    "@angular/forms": "^7.0.2",
+    "@angular/http": "^7.0.2",
+    "@angular/material": "^7.0.2",
+    "@angular/material-moment-adapter": "^7.0.2",
+    "@angular/platform-browser": "^7.0.2",
+    "@angular/platform-browser-dynamic": "^7.0.2",
+    "@angular/platform-server": "^7.0.2",
+    "@angular/router": "^7.0.2",
     "@auth0/angular-jwt": "^2.0.0",
-    "@swimlane/ngx-charts": "^9.0.0",
+    "@swimlane/ngx-charts": "^10.0.0",
     "@types/chart.js": "^2.7.14",
     "amqplib": "^0.5.2",
     "app-root-path": "^2.0.1",
@@ -40,51 +41,54 @@
     "chart.js": "^2.7.2",
     "compress": "^0.99.0",
     "compression": "^1.7.2",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.7",
     "express": "^4.16.3",
     "generate-password": "^1.4.0",
-    "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.2.1",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.3",
     "morgan": "^1.9.0",
     "popper": "^1.0.1",
-    "rxjs": "^6.2.2",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "serve-favicon": "^2.5.0",
     "web3": "^1.0.0-beta.36",
     "web3-typescript-typings": "^0.10.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "6.0.9",
-    "@angular/language-service": "6.0.9",
+    "@angular-devkit/build-angular": "^0.10.4",
+    "@angular/cli": "^7.0.4",
+    "@angular/compiler-cli": "^7.0.2",
+    "@angular/language-service": "^7.0.2",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
-    "@types/jasmine": "~2.8.3",
+    "@babel/node": "^7.0.0",
+    "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.104",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "codelyzer": "^4.0.1",
+    "@types/node": "^10.12.2",
+    "codelyzer": "^4.5.0",
     "gulp-dev": "^0.3.0",
     "gulp-env": "^0.4.0",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "jasmine-core": "^3.3.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^3.1.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "logger": "0.0.1",
-    "nodemon": "^1.17.3",
-    "protractor": "^5.1.2",
+    "nodemon": "^1.18.4",
+    "protractor": "^5.4.1",
+    "rxjs-tslint": "^0.1.5",
     "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "^3.1.0"
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.6",
+    "webpack": "^4.24.0"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 1.7.1.",
   "main": "app.js",
