--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "ether-vote-as:build",
-            "ssl": false,
+            "ssl": true,
             "sslKey": "./ssl/server.key",
             "sslCert": "./ssl/server.crt"
           },
