--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ng": "ng",
     "update-web-pack": "node web3-patch.js",
     "ui": "ng serve --proxy-config proxy.config.json",
-    "build-ui": "ng build",
+    "ui-prod": "ng serve --proxy-config proxy.config.json --host 172.16.5.166 --port 8080 --disable-host-check",
+    "build-ui": "ng build --prod",
     "start": "nodemon --delay 1.5 server/app.js --exec babel-node",
     "build": "babel -d dist",
     "debug": "babel-node --inspect --inspect-brk=9215 server/app.js",
@@ -49,6 +50,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.3.3",
     "morgan": "^1.9.0",
+    "node-gyp": "^3.8.0",
     "popper": "^1.0.1",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
